--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -2,3 +2,4 @@
 # tasks file for postfix(On Debian family)
 - name: Install Postfix with APT
   apt: name=postfix update_cache=yes cache_valid_time=3600 install_recommends=no
+  become: yes
