--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ matrix:
       language: generic
       env:
         - TARGET=localhost
+        - PYTHONPATH="/Library/Python/2.7/site-packages:$PYTHONPATH"
+      install:
+        - sudo pip install -U setuptools
+        - sudo pip install ansible
+        - ansible-galaxy install FGtatsuro.python-requirements
+        - bundle install
     - os: linux
       dist: trusty
       language: python
@@ -50,7 +56,7 @@ matrix:
 sudo: required
 
 install:
-  - sudo pip install ansible
+  - pip install ansible
   # Resolve dependencies(When target role isn't installed via Ansible Galaxy, auto resolution of dependencies doesn't occur.)
   - ansible-galaxy install FGtatsuro.python-requirements
   - bundle install
